# BaboonTechnologiesProject

./: .gitignore  AGENTIC.md  ARCHITECTURE.md  Backend_agent_behavior_tests_.docx  DEPLOYMENT.md  FINAL_VERSION.md  GitWorkflow.md  PROJECT_REPORT.md  README.md  STATUS.md  app_context_original.txt  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: .env.example  README.md  import libraries possibilities list.py  pyproject.toml
backend/.edgar/: main.py
backend/Orchestration/: Generate_Tasks.py  Model_Initialize.py  Normalize_Timeframes.py  ReactAgent.py  app.py  chat_bot.py
backend/Orchestration_Tests/: Data_Structure_Storage_Proposal.py  React_Agent_Test_File.py  chat_bot.py  llm.py  tools.py
backend/Orchestration_Tests(Langraph)/: ReactAgent.py  tools.py
backend/app/orchestrator/: React_agent_and_orchestration.py
backend/app/planning/: generate_tasks.py
backend/company_valuation_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/src/backend/: __init__.py  main.py
backend/src/backend/Agent/: ReactAgent.py  cache.py  cache_schema.py  graph.py  graph_helpers.py  main.py  memory.py  prompts.py  state.py  tools.py
backend/src/backend/Agent/tests/: test_graph_behavior.py
backend/src/backend/adapters/: damodaran.py  edgar.py  fred.py  yahoo_finance.py
backend/src/backend/agent/: __init__.py  agent_graph.mmd  cache.py  cache_schema.py  constants.py  graph.py  llm.py  main.py  messages.py  prompts.py  runtime.py  state.py  streaming.py  tools.py
backend/src/backend/agent/cache/: __init__.py  base.py  catalog.py  comparables.py  damodaran.py  dcf.py  financials.py  growth.py  market_data.py  merge.py  ratios.py  schema.py  sector_data.py  session.py  store.py
backend/src/backend/agent/edges/: __init__.py  after_judge.py  after_plan.py  after_react.py  after_router.py
backend/src/backend/api/: routes.py  schemas.py
backend/src/backend/auth/: __init__.py  dependencies.py
backend/src/backend/core/: chat_bot.py  config.py  llm.py
backend/src/backend/data/: sic.csv
backend/src/backend/db/: supabase.py
backend/src/backend/planning/: task_generation.py
backend/src/backend/processing/: schema.py  test.py  test2.py  xbrl_map.py
backend/src/backend/repositories/: chats.py
backend/src/backend/scripts/: adapters.py  agent_graph.py  dcf.py  dcf_assumptions.py  dcf_draft.py  dcf_lean.py  dcf_variables.py  etl.py  etl_lean.py  sic.py  trace_min.py  xbrl.py  xbrl2.py  xbrl3.py
backend/src/backend/services/: agent_service.py  comparables.py  dcf_engine.py  financials.py  growth.py  ratio.py  scrape.py  tool_metadata.py
backend/src/backend/ui/: gradio_app.py
backend/supabase/migrations/: 001_auth_chat_schema.sql  002_profile_fields.sql
backend/tests/unit/: test_profile_schema.py
backend/tests/unit/Agent/: test_graph_routing.py
backend/tests/unit/agent/: test_cache_state_evolution.py  test_graph_behavior.py  test_streaming.py
backend/tests/unit/processing/: test_pipeline.py  test_ratios.py  test_xbrl_map.py
(+48 files in other folders)
