[project]
name = "baboontechnologiesproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "langchain>=1.2.17",
    "langgraph>=1.1.10",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]
