[project]
name = "backend"
version = "0.1.0"
description = "Python API backend for BaboonTechnologiesProject"
readme = "README.md"
authors = [
    { name = "smith8jas", email = "smith8jas@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=1.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
