[project]
name = "backend"
version = "0.1.0"
description = "Python API backend for BaboonTechnologiesProject"
readme = "README.md"
authors = [
    { name = "smith8jas", email = "smith8jas@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "edgartools>=5.30.3",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
    "yfinance>=1.3.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]