[project]
name = "backend"
version = "0.1.0"
description = "Python API backend for BaboonTechnologiesProject"
readme = "README.md"
authors = [
    { name = "smith8jas", email = "smith8jas@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "edgartools>=5.30.3",
    "fastapi>=0.136.1",
    "ipython>=9.13.0",
    "langchain>=1.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-cohere>=0.3.0",
    "langchain-fireworks>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-mistralai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=1.2.1",
    "langchain-together>=0.2.0",
    "langchain-xai>=0.2.0",
    "langgraph>=1.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.35.1",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "beautifulsoup4>=4.12.0",
    "ddgs>=0.1.0",
    "httpx>=0.28.0",
    "requests>=2.33.1",
    "scrapy>=2.12.0",
    "uvicorn>=0.46.0",
    "xlrd>=2.0.2",
    "yfinance>=1.3.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
